syntax = "proto3";

package protofile;

message Packet{
	int32 version =1;
	EnumMessageCommand command =2;
	int32 userid =3;
	bytes serialized =4;
}

message JudgeRequest{
	int32 problem_id = 1;
	string user_code = 2;
}

message QueryRequest{
	int32 problem_id = 1;
}

message JudgeResponse{
	int32 problem_id = 1;
	int32 judge_sol = 2;
}

message QueryResponse{
	int32 problem_id = 1;
	string problem_title =2;
	string problem_des =3;
	string problem_sample_in =4;
	string problem_sample_out =5;
	int32 problem_time =6;
	int32 problem_mem =7;
}
message QueryAllResponse{
	repeated QueryResponse problem_list=1;
}
enum EnumMessageCommand{
	enumJudgeRequest = 0;
	enumJudgeRresponse = 1;
	enumQueryRequest = 2;
	enumQueryResponse = 3;
	enumQueryAllRequest = 4;
	enumQueryAllResponse = 5;	
}
